--- a/beamerthemePurdue.sty
+++ b/beamerthemePurdue.sty
@@ -1,5 +1,3 @@
-\ProvidesPackageRCS $Header: /cvsroot/latex-beamer/latex-beamer/themes/theme/beamerthemepurdue.sty,v 1.0 2007/08/229 Rusin Exp $
-
 % Copyright 2007 by Walter Rusin <rusin018@math.umn.edu>
 %
 % This program can be redistributed and/or modified under the terms
@@ -14,4 +12,5 @@
 \setbeamerfont{block title}{size={}}
 \setbeamercolor{titlelike}{parent=structure,bg=white}
 
-\mode<all>
+\mode
+<all>
