purdue colors for blocks and frames

--- a/beamercolorthemepurdue.sty
+++ b/beamercolorthemepurdue.sty
@@ -14,14 +14,16 @@
 % Need to figure out which part of this structure regulates the color of the ticks
 % \setbeamercolor{structure}{fg=white}
 
+%% block colors
 \setbeamercolor{block title}{use=structure,fg=i6colorscheme5,bg=i6colorscheme1}
 \setbeamercolor{block title alerted}{use=structure,fg=i6colorscheme6,bg=i6colorscheme1}
 \setbeamercolor{block title example}{use=structure,fg=i6colorscheme6,bg=i6colorscheme1}
 
 \setbeamercolor{block body}{parent=normal text,use=block title,bg=i6colorscheme4}
 \setbeamercolor{block body alerted}{parent=normal text,use=block title alerted,bg=i6colorscheme4}
-
 \setbeamercolor{block body example}{parent=normal text,use=block title example,bg=i6colorscheme4}
+
+%% frame colors
 \setbeamercolor*{palette primary}{use=structure,fg=black,bg=i6colorscheme5}
 \setbeamercolor*{palette secondary}{use=structure,fg=white,bg=i6colorscheme1!50!i6colorscheme5}
 \setbeamercolor*{palette tertiary}{use=structure,fg=white,bg=i6colorscheme1}
