--- a/beamercolorthemepurdue.sty
+++ b/beamercolorthemepurdue.sty
@@ -1,12 +1,12 @@
 \mode<presentation>
 
-\definecolor{i6colorscheme1}{HTML}{000000}  %  e.g. for headline background
-\definecolor{i6colorscheme2}{HTML}{FFFFFF}  %  e.g. title in headline
-\definecolor{i6colorscheme3}{HTML}{FFFFFF}  %  e.g. for poster background
-\definecolor{i6colorscheme4}{HTML}{F0F0F0}  %  e.g. for block background
-\definecolor{i6colorscheme5}{HTML}{B1946C}  %  e.g. title in headline, separation lines
+\definecolor{i6colorscheme1}{HTML}{000000}  %  e.g. black -- for headline background
+\definecolor{i6colorscheme2}{HTML}{FFFFFF}  %  e.g. white -- title in headline
+\definecolor{i6colorscheme3}{HTML}{FFFFFF}  %  e.g. white -- for poster background
+\definecolor{i6colorscheme4}{HTML}{F0F0F0}  %  e.g. light grey -- for block background
+\definecolor{i6colorscheme5}{HTML}{B1946C}  %  e.g. dark grey -- title in headline, separation lines
 %% old gold: CFB53B E0D5C5
-\definecolor{i6colorscheme6}{HTML}{D5973D}  %  e.g. for alert
+\definecolor{i6colorscheme6}{HTML}{D5973D}  %  e.g. burnt gold -- for alert
 
 \setbeamertemplate{itemize items}[triangle]
 
