shadow calls purduesplit theme

--- a/beamerouterthemepurdueshadow.sty
+++ b/beamerouterthemepurdueshadow.sty
@@ -10,7 +10,7 @@
 
 \mode<presentation>
 
-\useoutertheme{split}
+\useoutertheme{purduesplit}
 
 \setbeamercolor{frametitle}{parent=subsection in head/foot}
 \setbeamercolor{frametitle right}{parent=section in head/foot}
@@ -84,39 +84,6 @@
   }%
   \vskip-2pt
 }
-
-%% \defbeamertemplate*{headline}{infolines theme}
-%% {
-%%   \leavevmode%
-%%   \hbox{%
-%%   \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.25ex,dp=1ex,center]{author in head/foot}%
-%%     \usebeamerfont{author in head/foot}\insertshorttitle
-%%   \end{beamercolorbox}%
-%%   \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.25ex,dp=1ex,left]{subsection in head/foot}%
-%%     \usebeamerfont{subsection in head/foot}\hspace*{2ex}\insertsectionhead
-%%   \end{beamercolorbox}}%
-%%   \vskip0pt%
-%%   \vskip0pt%
-%% }
-
-%% \defbeamertemplate*{footline}{infolines theme}
-%% {
-%%   \leavevmode%
-%%   \hbox{%
-%%   \begin{beamercolorbox}[wd=.333333\paperwidth,ht=3.5ex,dp=1ex,left]{section in head/foot}%
-%%     \usebeamerfont{section in head/foot}
-%% %\vspace*{-3px}~\includegraphics[width=.15\paperwidth]{LittleP.png}~\hspace*{2ex}
-%% \vspace*{-3px}~\includegraphics[width=.10\paperwidth]{PurdueUniversity.png}~\hspace*{2ex}
-%% %\vspace*{2px}\insertshortinstitute
-%%   \end{beamercolorbox}%
-%%   \begin{beamercolorbox}[wd=.333333\paperwidth,ht=3.5ex,dp=1ex,center]{title in head/foot}%
-%%     \usebeamerfont{title in head/foot}\vspace*{2px}\insertshortauthor
-%%   \end{beamercolorbox}%
-%%   \begin{beamercolorbox}[wd=.333333\paperwidth,ht=3.5ex,dp=1ex,right]{date in head/foot}%
-%%     \usebeamerfont{date in head/foot}\vspace*{2px}\insertshortdate{}\hspace*{2em}
-%%     \insertframenumber{} / \inserttotalframenumber\hspace*{2ex} 
-%%   \end{beamercolorbox}}%
-%% }
 
 \mode
 <all>
