--- a/beamerouterthemepurduesplit.sty
+++ b/beamerouterthemepurduesplit.sty
@@ -16,16 +16,14 @@
 \setbeamercolor{author in head/foot}{parent=section in head/foot}
 \setbeamercolor{title in head/foot}{parent=subsection in head/foot}
 
-
-
 \usesectionheadtemplate
   {\hfill\insertsectionhead}
   {\hfill\color{fg!50!bg}\insertsectionhead}
 
-                                % Head
+%% Head
 \ifbeamer@compress
 
-\defbeamertemplate*{headline}{split theme}
+\defbeamertemplate*{headline}{purduesplit theme}
 {%
   \leavevmode%
   \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex]{section in head/foot}%
@@ -38,7 +36,7 @@
 
 \else
 
-\defbeamertemplate*{headline}{split theme}
+\defbeamertemplate*{headline}{purduesplit theme}
 {%
   \leavevmode%
   \@tempdimb=2.4375ex%
@@ -60,8 +58,7 @@
 
 \fi
 
-
-\defbeamertemplate*{footline}{split theme}
+\defbeamertemplate*{footline}{purduesplit theme}
 {%
   \leavevmode%
   \hbox{\begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm plus1fill,rightskip=.3cm]{author in head/foot}%
@@ -70,21 +67,6 @@
   \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
     \usebeamerfont{title in head/foot}\insertshorttitle\nobreak\hfill\usebeamercolor[fg]{page number in head/foot}\usebeamerfont{page number in head/foot}\usebeamertemplate{page number in head/foot}
   \end{beamercolorbox}}%
-  \vskip0pt%
-}
-
-
-\defbeamertemplate*{headline}{infolines theme}
-{
-  \leavevmode%
-  \hbox{%
-  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.25ex,dp=1ex,center]{author in head/foot}%
-    \usebeamerfont{author in head/foot}\insertshorttitle
-  \end{beamercolorbox}%
-  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.25ex,dp=1ex,left]{subsection in head/foot}%
-    \usebeamerfont{subsection in head/foot}\hspace*{2ex}\insertsectionhead
-  \end{beamercolorbox}}%
-  \vskip0pt%
   \vskip0pt%
 }
 
