--- a/beamerouterthemepurduesplit.sty
+++ b/beamerouterthemepurduesplit.sty
@@ -26,10 +26,10 @@
 \defbeamertemplate*{headline}{purduesplit theme}
 {%
   \leavevmode%
-  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex]{section in head/foot}%
+  \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex]{section in head/foot}%
     \insertsectionnavigationhorizontal{.5\paperwidth}{\hskip0pt plus1filll}{}%
   \end{beamercolorbox}%
-  \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex]{subsection in head/foot}%
+  \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex]{subsection in head/foot}%
     \insertsubsectionnavigationhorizontal{.5\paperwidth}{}{\hskip0pt plus1filll}%
   \end{beamercolorbox}%
 }
@@ -47,10 +47,10 @@
   \fi%
   \ifdim\@tempdimb>0pt%
     \advance\@tempdimb by 1.825ex%
-    \begin{beamercolorbox}[wd=.5\paperwidth,ht=\@tempdimb]{section in head/foot}%
+    \begin{beamercolorbox}[wd=.5\paperwidth, ht=\@tempdimb]{section in head/foot}%
       \vbox to\@tempdimb{\vfil\insertsectionnavigation{.5\paperwidth}\vfil}%
     \end{beamercolorbox}%
-    \begin{beamercolorbox}[wd=.5\paperwidth,ht=\@tempdimb]{subsection in head/foot}%
+    \begin{beamercolorbox}[wd=.5\paperwidth, ht=\@tempdimb]{subsection in head/foot}%
       \vbox to\@tempdimb{\vfil\insertsubsectionnavigation{.5\paperwidth}\vfil}%
     \end{beamercolorbox}%
   \fi%
@@ -58,17 +58,19 @@
 
 \fi
 
+%% TODO: control image insertion depending on compactness (compact presentation,  noncompact poster)
+
 \defbeamertemplate*{footline}{purduesplit theme}
 {%
   \leavevmode%
   \hbox{%
-    \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm plus1fill,rightskip=.3cm]{author in head/foot}%
-      \usebeamerfont{author in head/foot}\insertshortauthor
+    \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex, left]{author in head/foot}%
+      %\usebeamerfont{author in head/foot}\insertshortauthor
       %\vspace*{-3px}~\includegraphics[width=.15\paperwidth]{LittleP.png}~\hspace*{2ex}
       \vspace*{-3px}~\includegraphics[width=.10\paperwidth]{PurdueUniversity.png}~\hspace*{2ex}
       %\vspace*{2px}\insertshortinstitute
     \end{beamercolorbox}%
-    \begin{beamercolorbox}[wd=.5\paperwidth,ht=2.5ex,dp=1.125ex,leftskip=.3cm,rightskip=.3cm plus1fil]{title in head/foot}%
+    \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex, leftskip=.3cm, rightskip=.3cm plus1fil]{title in head/foot}%
       \usebeamerfont{title in head/foot}\insertshorttitle\nobreak\hfill\usebeamercolor[fg]{page number in head/foot}\usebeamerfont{page number in head/foot}\usebeamertemplate{page number in head/foot}
     \end{beamercolorbox}
   }%
