Revert "move logo. new png"
This reverts commit e2375974b61fda69492a3776f87ee9f8c1bf6800.

--- a/beamerouterthemepurduesplit.sty
+++ b/beamerouterthemepurduesplit.sty
@@ -32,10 +32,6 @@
   \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex]{subsection in head/foot}%
     \insertsubsectionnavigationhorizontal{.5\paperwidth}{}{\hskip0pt plus1filll}%
   \end{beamercolorbox}%
-  \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex, right]{logo in head/foot}%
-    \vspace*{-3px}~\includegraphics[width=.10\paperwidth]{PU-H-Full-Rev-RGB.png}~\hspace*{2ex}
-  \end{beamercolorbox}%
-
 }
 
 \else
@@ -69,8 +65,9 @@
   \leavevmode%
   \hbox{%
     \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex, left]{author in head/foot}%
-      \usebeamerfont{author in head/foot}\insertshortauthor
+      %\usebeamerfont{author in head/foot}\insertshortauthor
       %\vspace*{-3px}~\includegraphics[width=.15\paperwidth]{LittleP.png}~\hspace*{2ex}
+      \vspace*{-3px}~\includegraphics[width=.10\paperwidth]{PurdueUniversity.png}~\hspace*{2ex}
       %\vspace*{2px}\insertshortinstitute
     \end{beamercolorbox}%
     \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex, leftskip=.3cm, rightskip=.3cm plus1fil]{title in head/foot}%
