--- a/beamerouterthemepurduesplit.sty
+++ b/beamerouterthemepurduesplit.sty
@@ -67,7 +67,7 @@
     \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex, left]{author in head/foot}%
       %\usebeamerfont{author in head/foot}\insertshortauthor
       %\vspace*{-3px}~\includegraphics[width=.15\paperwidth]{LittleP.png}~\hspace*{2ex}
-      \vspace*{-3px}~\includegraphics[width=.10\paperwidth]{PurdueUniversity.png}~\hspace*{2ex}
+      \vspace*{-3px}~\includegraphics[width=.10\paperwidth]{PU-H-Full-Rev-RGB.png}~\hspace*{2ex}
       %\vspace*{2px}\insertshortinstitute
     \end{beamercolorbox}%
     \begin{beamercolorbox}[wd=.5\paperwidth, ht=2.5ex, dp=1.125ex, leftskip=.3cm, rightskip=.3cm plus1fil]{title in head/foot}%
